# backend/docs/swagger.json
@@ -963,9 +963,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "New Webhook Token",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/v1.WebhookTokenResponse"
                         }
                     },
                     "401": {
@@ -4609,7 +4609,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/discovery.DiscoverResult"
+                                "$ref": "#/definitions/homelab_pkg_apis_core_rbac_v1.DiscoverResult"
                             }
                         }
                     },
@@ -5209,7 +5209,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.ServiceAccount"
+                            "$ref": "#/definitions/v1.ServiceAccountTokenResponse"
                         }
                     },
                     "400": {
@@ -5272,7 +5272,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.ServiceAccount"
+                            "$ref": "#/definitions/v1.ServiceAccountTokenResponse"
                         }
                     },
                     "400": {
@@ -5378,7 +5378,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.ServiceAccount"
+                            "$ref": "#/definitions/v1.ServiceAccountTokenResponse"
                         }
                     },
                     "401": {
@@ -5539,7 +5539,7 @@
                 }
             }
         },
-        "discovery.DiscoverResult": {
+        "homelab_pkg_apis_core_rbac_v1.DiscoverResult": {
             "type": "object",
             "properties": {
                 "final": {
@@ -6236,10 +6236,16 @@
                 "description": {
                     "type": "string"
                 },
+                "email": {
+                    "type": "string"
+                },
                 "enabled": {
                     "type": "boolean"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "primaryNs": {
                     "type": "string"
                 }
             }
@@ -6587,7 +6593,12 @@
             }
         },
         "v1.RecordStatus": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "soa": {
+                    "$ref": "#/definitions/v1.SOAStatus"
+                }
+            }
         },
         "v1.ResourcePermissions": {
             "type": "object",
@@ -6703,6 +6714,32 @@
                 }
             }
         },
+        "v1.SOAStatus": {
+            "type": "object",
+            "properties": {
+                "expire": {
+                    "type": "integer"
+                },
+                "mName": {
+                    "type": "string"
+                },
+                "minimum": {
+                    "type": "integer"
+                },
+                "rName": {
+                    "type": "string"
+                },
+                "refresh": {
+                    "type": "integer"
+                },
+                "retry": {
+                    "type": "integer"
+                },
+                "serial": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.ServiceAccount": {
             "type": "object",
             "properties": {
@@ -6734,16 +6771,27 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "token": {
-                    "type": "string"
                 }
             }
         },
         "v1.ServiceAccountStatus": {
             "type": "object",
             "properties": {
+                "hasAuthSecret": {
+                    "type": "boolean"
+                },
                 "lastUsedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.ServiceAccountTokenResponse": {
+            "type": "object",
+            "properties": {
+                "serviceAccount": {
+                    "$ref": "#/definitions/v1.ServiceAccount"
+                },
+                "token": {
                     "type": "string"
                 }
             }
@@ -6965,9 +7013,6 @@
                 },
                 "workflowId": {
                     "type": "string"
-                },
-                "workspace": {
-                    "type": "string"
                 }
             }
         },
@@ -7043,6 +7088,14 @@
                 }
             }
         },
+        "v1.WebhookTokenResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.Workflow": {
             "type": "object",
             "properties": {
@@ -7101,9 +7154,6 @@
                 },
                 "webhookEnabled": {
                     "type": "boolean"
-                },
-                "webhookToken": {
-                    "type": "string"
                 }
             }
         },
@@ -7121,6 +7171,9 @@
             "properties": {
                 "createdAt": {
                     "type": "string"
+                },
+                "hasWebhookSecret": {
+                    "type": "boolean"
                 },
                 "updatedAt": {
                     "type": "string"
